# memoria

./: .codespellrc  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  api-spec.json  db.json  docker-compose.yaml  fixture.json  manage.py  memoria.code-workspace  mkdocs.yml  pyproject.toml  schema.json
.github/workflows/: docker.yml
docs/: architecture.md  initial_frontend_prompt.txt  prompt.txt  roles.md  roles_chatgpt.md  roles_gemini.md
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.tsx  api-config.ts  main.tsx
frontend/src/api/: apiClient.ts  client.gen.ts  sdk.gen.ts  types.gen.ts  types.ts
frontend/src/components/: EditPersonModal.tsx  StatisticsComponent.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/pages/: AlbumDetailsPage.tsx  AlbumsPage.tsx  FolderDetail.tsx  FoldersPage.tsx  HomePage.tsx  ImageDetail.tsx  LoginPage.tsx  LogoutPage.tsx  PeoplePage.tsx  PersonDetailsPage.tsx  ProfilePage.tsx  SettingsPage.tsx
frontend/src/utils/: formatBytes.ts  transformCoordinates.ts
memoria/: api.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
memoria/.archive/templates/: albums.html.jinja  dates.html.jinja  profile.html.jinja
memoria/.archive/views/: __init__.py  albums.py  folders.py  home.py  images.py  locations.py  profile.py  settings.py
memoria/common/: auth.py
memoria/db/: postgresql.py  sqlite.py
memoria/forms/: __init__.py  images.py  people.py  profile.py  settings.py
memoria/imageops/: index.py  metadata.py  sync.py
memoria/management/commands/: index.py  replace.py  sync.py
memoria/migrations/: 0001_initial.py  0002_alter_tag_name.py  0002_userprofile_timezone.py  0003_personinimage_height_percent_value_and_more.py
memoria/models/: __init__.py  abstract.py  album.py  image.py  metadata.py  permissions.py  settings.py  user.py
memoria/routes/albums/: api.py
memoria/routes/authentication/: api.py  schemas.py
memoria/routes/folders/: api.py  schemas.py
memoria/routes/groups/: api.py
memoria/routes/images/: api.py  conditionals.py  schemas.py
memoria/routes/locations/: api.py  schemas.py
memoria/routes/people/: api.py  schemas.py
memoria/routes/system/: api.py
memoria/routes/tags/: api.py
memoria/routes/users/: api.py  schemas.py
memoria/signals/: __init__.py  handlers.py
memoria/static/css/: boundingbox.css  masonry.css
memoria/static/js/: theme-picker.js  theme-setter.js  transform-bounding-box.js
memoria/tasks/: __init__.py  images.py  models.py
memoria/templates/: albums.html.jinja  base.html.jinja  dates.html.jinja  galleries.html.jinja  home.html.jinja  images.html.jinja  locations.html.jinja  login.html.jinja  logout.html.jinja  password_reset.html.jinja  people.html.jinja  profile.html.jinja  settings.html.jinja  sources.html.jinja
memoria/templates/folders/: detail.html.jinja  list.html.jinja
memoria/templates/images/: detail.html.jinja  update.html.jinja
memoria/utils/: __init__.py  constants.py  geo.py  hashing.py  permissions.py  photos.py
memoria/views/: __init__.py  dates.py  folders.py  galleries.py  home.py  images.py  locations.py  mixins.py  people.py  profile.py  settings.py  sources.py
scripts/: sync_version.py
src-backend/: .gitignore  Taskfile.yml  pyproject.toml
src-backend/.archive/tests/api/: test_api_images.py  test_api_rough_date.py
src-backend/.archive/tests/fixtures/: indexed_sample_database.json  sample2.jpg.json  sample3.jpg.json
src-backend/.archive/tests/management/: test_command_sync.py
src-backend/memoria/: api.py  apps.py  settings.py
src-backend/memoria/common/: auth.py  errors.py  parser.py
src-backend/memoria/imageops/: index.py  metadata.py  replace.py  sync.py
src-backend/memoria/management/commands/: cleanup_rough_locations.py  index.py  sync.py
src-backend/memoria/migrations/: 0001_initial.py  0002_create_site_settings.py  0003_alter_roughdate_day_alter_roughdate_month_and_more.py
src-backend/memoria/models/: __init__.py  abstract.py  album.py  image.py  metadata.py  settings.py
src-backend/memoria/routes/.todo/locations/: api.py  schemas.py
src-backend/memoria/routes/.todo/pets/: api.py
src-backend/memoria/routes/.todo/rough_dates/: api.py
src-backend/memoria/routes/.todo/sources/: api.py
src-backend/memoria/routes/.todo/tags/: api.py
src-backend/memoria/routes/albums/: api.py  schemas.py
src-backend/memoria/routes/authentication/: api.py
src-backend/memoria/routes/common/: schemas.py
src-backend/memoria/routes/folders/: api.py  schemas.py
src-backend/memoria/routes/groups/: api.py  schemas.py
src-backend/memoria/routes/images/: api.py  filters.py  schemas.py
src-backend/memoria/routes/locations/: api.py  schemas.py
src-backend/memoria/routes/people/: api.py  schemas.py
src-backend/memoria/routes/pets/: api.py  schemas.py
src-backend/memoria/routes/system/: api.py  schemas.py
src-backend/memoria/routes/users/: api.py  schemas.py
src-backend/memoria/tasks/: __init__.py  images.py  models.py
src-backend/memoria/utils/: constants.py  database.py  locking.py  photos.py
src-backend/tests/: conftest.py  mixins.py
src-backend/tests/api/: conftest.py  test_api_album.py  test_api_auth.py  test_api_groups.py  test_api_locations.py  test_api_misc.py  test_api_people.py  test_api_pets.py  test_api_tags.py  test_api_users.py
src-backend/tests/fixtures/: sample1.jpg.json  sample4.jpg.json
src-backend/tests/management/: test_command_index.py
src-docker/: Dockerfile  docker-compose.yaml
src-docs/: CHANGELOG.md  Taskfile.yml  mkdocs.yml  pyproject.toml
src-docs/docs/: initial_frontend_prompt.txt
src-frontend/: Taskfile.yml  eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
src-frontend/src/: App.tsx  main.tsx
static/bootstrap-icons/: bootstrap-icons.min.css
(+160 files in other folders)
