[project]
name = "memoria"
version = "0.0.1"
description = "Memoria Monorepo Project"
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[tool.uv.workspace]
members = [
  "src-backend",
  "src-docs",
]
