[project]
name = "memoria-docs"
version = "0.0.1"
description = "Memoria Project Documentation"
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mike~=2.1",
  "mkdocs-glightbox~=0.4.0",
  "mkdocs-material~=9.6",
  "mkdocs-minify-plugin~=0.8",
]
